demo-http-apps/demo-http-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: "v1.mydomain.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-v1
                port:
                  number: 80
    - host: "v2.mydomain.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-v2
                port:
                  number: 80
    - host: "v3.mydomain.com"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-v3
                port:
                  number: 80
